# temporal-rag-qa-system

./: .dockerignore  Dockerfile  Dockerfile.gradio  README.md  compose.yaml  gradio_app.py  main.py  pyproject.toml
.github/: copilot-instructions.md
inference/: Dockerfile  download_model.py  main.py
public/: index.html
src/: dependencies.py
src/api/: agentic_ask.py  auth.py
src/core/: config.py  rate_limit.py  security.py
src/database/: seed.py
src/gradio_ui/: __init__.py  api_client.py  app.py  components.py  config.py  handlers.py  styles.py  utils.py
src/models/: user.py
src/repositories/: user.py
src/schemas/: user.py
src/services/: user.py
src/services/rag/: agent_graph.py  bm25.py  config.py  context.py  prompts.py
src/services/rag/nodes/: rerank_node.py  utils.py
